<resources>
    <string name="version_name">1.0.0</string>
    <string name="app_name">Explore Arround</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_mail_us">Mail Us</string>
    <string name="action_call">Call</string>
    <string name="action_direction">Directions</string>
    <string name="action_website">Website</string>
    <string name="action_share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="gps_network_not_enabled">GPS not enabled</string>
    <string name="gps_alert_dialog_title">GPS not enabled</string>
    <string name="gps_alert_dialog_message">Enable GPS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wait">Please wait</string>
    <string name="hours">Open Hours</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_units">Units</string>
    <string name="pref_title_choose_units">Choose the Units</string>
    <string-array name="pref_units_list_titles">
        <item>Miles</item>
        <item>Kilometer</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
</resources>
