<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/collapsing_toolbar">

                <include
                    android:id="@+id/tool_bar"
                    layout="@layout/tool_bar"
                    ></include>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Name"
                    android:id="@+id/name"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.27"
                    android:textSize="30sp" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"/>
                <!--
                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:id="@+id/map"
                    android:layout_below="@+id/tool_bar"
                    android:layout_marginTop="2dp"
                    android:layout_alignParentRight="true"
                    tools:context=".DetailsActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>
                    !-->
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/linearlayout">
                <LinearLayout
                    android:id="@+id/Linear1"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/phone"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/textView1"
                        android:text="@string/action_call"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/color_primary"
                        android:layout_marginBottom="5dp"
                        android:layout_below="@+id/imageView1"/>
                </LinearLayout>


            <LinearLayout
                android:id="@+id/Linear2"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/map"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/action_direction"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/color_primary"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/imageView2"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linear3"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="vertical" >
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/share"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:text="@string/action_share"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/color_primary"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/imageView3"/>
            </LinearLayout>
                <LinearLayout
                    android:id="@+id/Linear4"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/web"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:text="@string/action_website"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/color_primary"
                        android:layout_marginBottom="5dp"
                        android:layout_below="@+id/imageView3"/>
                   </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="2dp"
                    android:background="@color/color_primary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/weblayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/webaddress"
                            android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/weblink"
                        android:autoLink="web|all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/phonelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/phone"
                            android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/phone"
                        android:autoLink="web|all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/location"
                            android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/vicinity"
                        android:autoLink="web|all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ratingBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"/>

                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:stepSize="1"
                            android:clickable="false"
                            style="?android:attr/ratingBarStyleSmall" />

                        <TextView
                            android:id="@+id/reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textSize="15sp"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textSize="15sp"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/open_hours_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/open_time" />

                        <TextView
                            android:id="@+id/open_status_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:layout_margin="10dp"
                            android:text="@string/hours"
                            android:layout_marginTop="10dp"
                            android:textIsSelectable="false" />

                        <Button
                            android:id="@+id/updown_btn"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/arrow_up" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/weekday_item_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="2dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:layout_margin="0dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/weekday_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15sp"
                            android:layout_marginTop="10dp"
                            android:layout_margin="10dp"
                            android:textIsSelectable="false"  />

                        <TextView
                            android:id="@+id/weekday_hours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp"
                            android:textIsSelectable="false"  />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>